--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   </head>
   <body>
 
+    <p>Вввод в текстовом поле с большой буквы</p>
     <form>
       <label for="mail">Фамилия работника:</label>
       <input type="text" id="work" name="fname" value=""><br><br>
